@@ -6,60 +6,50 @@
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="BeCrafter">
     <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="B:/Programs/Eclipse/eclipse/"/>
+    <property name="ECLIPSE_HOME" value="../../../eclipse/java-2019-12/eclipse/"/>
     <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="1.8"/>
-    <property name="source" value="1.8"/>
-    <path id="JavaFX SDK.libraryclasspath">
-        <pathelement location="../../../../../../../.p2/pool/plugins/org.eclipse.fx.ide.css.jfx8_3.5.0.201907240300.jar"/>
+    <property name="target" value="11"/>
+    <property name="source" value="11"/>
+    <path id="Web App Libraries.libraryclasspath">
+        <pathelement location="web/WEB-INF/lib/mariadb-java-client-2.5.3.jar"/>
     </path>
-    <path id="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath">
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/annotations-api.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-ant.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-ha.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-ssi.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-storeconfig.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina-tribes.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/catalina.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/ecj-4.13.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/el-api.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/jasper-el.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/jasper.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/jaspic-api.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/jsp-api.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/servlet-api.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-api.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-coyote.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-dbcp.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-cs.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-de.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-es.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-fr.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-ja.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-ko.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-pt-BR.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-ru.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-i18n-zh-CN.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-jdbc.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-jni.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-util-scan.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-util.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/tomcat-websocket.jar"/>
-        <pathelement location="../../../../../../../../../Program Files/Apache Software Foundation/Tomcat 9.0/lib/websocket-api.jar"/>
-    </path>
-    <path id="Web App Libraries.libraryclasspath"/>
     <path id="EAR Libraries.libraryclasspath"/>
+    <path id="JavaFX 11.userclasspath">
+        <pathelement location="../../../../../Program Files/Java/javafx-sdk-11/lib/javafx.base.jar"/>
+        <pathelement location="../../../../../Program Files/Java/javafx-sdk-11/lib/javafx.controls.jar"/>
+        <pathelement location="../../../../../Program Files/Java/javafx-sdk-11/lib/javafx.fxml.jar"/>
+        <pathelement location="../../../../../Program Files/Java/javafx-sdk-11/lib/javafx.graphics.jar"/>
+        <pathelement location="../../../../../Program Files/Java/javafx-sdk-11/lib/javafx.media.jar"/>
+        <pathelement location="../../../../../Program Files/Java/javafx-sdk-11/lib/javafx.swing.jar"/>
+        <pathelement location="../../../../../Program Files/Java/javafx-sdk-11/lib/javafx.web.jar"/>
+        <pathelement location="../../../../../Program Files/Java/javafx-sdk-11/lib/javafx-swt.jar"/>
+    </path>
     <path id="BeCrafter.classpath">
         <pathelement location="bin"/>
-        <path refid="JavaFX SDK.libraryclasspath"/>
-        <path refid="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath"/>
         <path refid="Web App Libraries.libraryclasspath"/>
         <path refid="EAR Libraries.libraryclasspath"/>
+        <path refid="JavaFX 11.userclasspath"/>
+        <pathelement location="lib/hamcrest-core-1.3.jar"/>
+        <pathelement location="lib/junit-4.13.jar"/>
+        <pathelement location="lib/mariadb-java-client-2.5.3.jar"/>
+        <pathelement location="lib/selenium-server-standalone-3.141.59.jar"/>
+    </path>
+    <path id="run.StandaloneCustomerMain.classpath">
+        <path refid="BeCrafter.classpath"/>
+        <path refid="Web App Libraries.libraryclasspath"/>
+        <path refid="EAR Libraries.libraryclasspath"/>
+        <path refid="JavaFX 11.userclasspath"/>
+        <pathelement location="lib/hamcrest-core-1.3.jar"/>
+        <pathelement location="lib/junit-4.13.jar"/>
+        <pathelement location="lib/mariadb-java-client-2.5.3.jar"/>
+        <pathelement location="lib/selenium-server-standalone-3.141.59.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src">
+                <exclude name="**/*.launch"/>
+                <exclude name="**/*.xtend"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -91,9 +81,10 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-    <target name="Main (1)">
-        <java classname="logic.Main" failonerror="true" fork="yes">
-            <classpath refid="BeCrafter.classpath"/>
+    <target name="StandaloneCustomerMain">
+        <java classname="logic.StandaloneCustomerMain" failonerror="true" fork="yes">
+            <jvmarg line="--module-path &quot;C:\Program Files\Java\javafx-sdk-11\lib&quot; --add-modules javafx.controls,javafx.fxml"/>
+            <classpath refid="run.StandaloneCustomerMain.classpath"/>
         </java>
     </target>
 </project>
